# crewai-ollama

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat  setup.py
src/ollama_swarm/: __init__.py  crew.py  main.py
src/ollama_swarm/agents/: __init__.py  nudge_composer.py  project_pulse.py  schedule_reader.py  teaching_crew.py
src/ollama_swarm/database/: __init__.py  db.py
src/ollama_swarm/integrations/: __init__.py  gmail_imap.py  google_calendar.py  smtp_sender.py  twilio_sms.py
